flickering bugfix

--- a/CSS/stylesheetStorage.css
+++ b/CSS/stylesheetStorage.css
@@ -906,7 +906,7 @@ ul {
     display: flex;
     justify-content: center;
     align-items: center;
-    position: absolute;
+    position: fixed;
     left: 0;
     top: 0;
 }
